--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
     <section class="user_info">
       <%= render 'shared/user_info' %>
     </section>
+    <section class="stats">
+      <%= render 'shared/stats' %>
+    </section>
     <section class="micropost_form">
       <%= render 'shared/micropost_form' %>
     </section>
@@ -27,4 +30,4 @@
 </div>
 
 <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"), "https://rubyonrails.org/" %>
-<%end%>
+<% end %>
